--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "deploy": "./publish.sh",
-    "test": "gulp && nyc --reporter=html --reporter=text mocha --reporter nyan test/*.js",
+    "test": "gulp && nyc --reporter=html --reporter=text mocha test/*.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
