--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jcc_exchange",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "api of jcc exchange",
   "main": "lib/index.js",
   "files": [
@@ -8,12 +8,13 @@
   ],
   "dependencies": {
     "jcc_jingtum_lib": "^1.4.4",
-    "jcc_rpc": "0.0.8"
+    "jcc_rpc": "0.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
+    "@babel/runtime": "^7.4.2",
     "axios-mock-adapter": "^1.15.0",
     "babel-eslint": "^8.2.6",
     "babel-runtime": "^6.26.0",
