--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jcc_exchange",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "api of jcc exchange",
   "main": "lib/index.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "dependencies": {
     "jcc_jingtum_lib": "^1.4.9",
-    "jcc_rpc": "0.0.9"
+    "jcc_rpc": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
