refactoring with typescript

--- a/package.json
+++ b/package.json
@@ -3,38 +3,54 @@
   "version": "1.0.9",
   "description": "api of jcc exchange",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib"
   ],
   "dependencies": {
+    "@types/node": "^12.0.12",
+    "babel-runtime": "^6.26.0",
     "jcc_jingtum_lib": "^1.4.9",
     "jcc_rpc": "^0.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/runtime": "^7.4.2",
-    "axios-mock-adapter": "^1.15.0",
-    "babel-eslint": "^8.2.6",
-    "babel-runtime": "^6.26.0",
-    "chai": "^4.1.2",
-    "coveralls": "^3.0.2",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "gulp": "^4.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-eslint": "^5.0.0",
-    "mocha": "^5.2.0",
-    "nyc": "^13.3.0"
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "acorn": "^6.2.1",
+    "axios-mock-adapter": "^1.17.0",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.4",
+    "gulp": "^4.0.2",
+    "gulp-shell": "^0.7.1",
+    "karma": "^4.1.0",
+    "karma-browserify": "^6.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-detect-browsers": "^2.3.3",
+    "karma-env-preprocessor": "^0.1.1",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-webpack": "^4.0.2",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "sinon": "^7.3.2",
+    "ts-loader": "^6.0.4",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.2",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5"
   },
   "scripts": {
+    "build": "tsc -p tsconfig.json",
     "deploy": "./publish.sh",
-    "test": "gulp && nyc --reporter=html --reporter=text mocha test/*.js",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "test": "gulp",
+    "test:node": "tsc && nyc --extension=.ts --reporter=lcov --reporter=html --reporter=text mocha --timeout=3000 test/*.spec.js",
+    "test:browser": "tsc && karma start karma.conf.js",
+    "tslint": "tslint --project tsconfig.json --config tslint.json",
+    "watch:tslint": "gulp dev"
   },
   "repository": {
     "type": "git",
