--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lib"
   ],
   "dependencies": {
+    "@swtc/serializer": "^1.0.8",
+    "@swtc/wallet": "^1.0.11",
     "@types/node": "^12.12.14",
-    "babel-runtime": "^6.26.0",
-    "jcc_jingtum_lib": "^1.5.3",
     "jcc_rpc": "^0.2.0"
   },
   "devDependencies": {
@@ -19,8 +19,6 @@
     "browserify": "^16.5.0",
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
-    "gulp": "^4.0.2",
-    "gulp-shell": "^0.7.1",
     "husky": "^3.1.0",
     "karma": "^4.4.1",
     "karma-browserify": "^6.0.0",
@@ -45,11 +43,10 @@
     "build": "tsc -p tsconfig.json",
     "deploy": "./publish.sh",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "gulp",
+    "test": "npm run test:node && npm run test:browser",
     "test:node": "tsc && nyc --extension=.ts --reporter=lcov --reporter=html --reporter=text mocha --timeout=3000 test/*.spec.js",
     "test:browser": "tsc && karma start karma.conf.js",
     "tslint": "tslint --project tsconfig.json --config tslint.json",
-    "watch:tslint": "gulp dev",
     "pretty": "prettier --write {src,test}/**/*.{js,ts}"
   },
   "repository": {
