--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@swtc/serializer": "^1.0.8",
     "@swtc/wallet": "^1.0.11",
-    "@types/node": "^12.12.14",
-    "jcc_rpc": "^0.2.0"
+    "@types/node": "^13.7.7",
+    "jcc_rpc": "^0.2.3"
   },
   "devDependencies": {
     "acorn": "^7.1.0",
@@ -19,31 +19,31 @@
     "browserify": "^16.5.0",
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
-    "husky": "^3.1.0",
+    "husky": "^4.2.3",
     "karma": "^4.4.1",
-    "karma-browserify": "^6.0.0",
+    "karma-browserify": "^7.0.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-detect-browsers": "^2.3.3",
     "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^1.2.0",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^4.0.2",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1",
+    "mocha": "^7.1.0",
+    "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
-    "sinon": "^7.5.0",
+    "sinon": "^9.0.0",
     "ts-loader": "^6.2.1",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "tslint": "^6.0.0",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "deploy": "./publish.sh",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "npm run test:node && npm run test:browser",
+    "test": "npm run tslint && npm run test:node && npm run test:browser",
     "test:node": "tsc && nyc --extension=.ts --reporter=lcov --reporter=html --reporter=text mocha --timeout=3000 test/*.spec.js",
     "test:browser": "tsc && karma start karma.conf.js",
     "tslint": "tslint --project tsconfig.json --config tslint.json",
