--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "build": "tsc -p tsconfig.json",
     "deploy": "./publish.sh",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "npm run tslint && npm run test:node && npm run test:browser",
+    "test": "npm run test:node && npm run test:browser",
     "test:node": "tsc && nyc --extension=.ts --reporter=lcov --reporter=html --reporter=text mocha --timeout=3000 test/*.spec.js",
     "test:browser": "tsc && karma start karma.conf.js",
     "tslint": "tslint --project tsconfig.json --config tslint.json",
@@ -64,7 +64,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "npm run tslint && pretty-quick --staged"
     }
   },
   "homepage": "https://github.com/JCCDex/jcc_exchange#readme"
