--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lib"
   ],
   "dependencies": {
+    "@swtc/common": "^1.0.11",
     "@swtc/serializer": "^1.0.9",
     "@swtc/wallet": "^1.0.11",
     "@types/node": "^13.7.7",
