--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jcc_exchange",
-  "version": "3.1.18",
+  "version": "3.1.16",
   "description": "api of jcc exchange",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -8,35 +8,35 @@
     "lib"
   ],
   "dependencies": {
-    "@swtc/common": "^1.0.20",
-    "@swtc/serializer": "^1.0.14",
-    "@swtc/wallet": "^1.0.17",
-    "@types/node": "^13.7.7",
-    "jcc_rpc": "^0.3.1"
+    "@swtc/common": "^1.1.0",
+    "@swtc/serializer": "^1.1.0",
+    "@swtc/wallet": "^1.1.0",
+    "@types/node": "^16.7.10",
+    "jcc_rpc": "^0.3.0"
   },
   "devDependencies": {
-    "acorn": "^7.1.1",
+    "acorn": "^8.4.1",
     "babelify": "^10.0.0",
-    "browserify": "^16.5.0",
+    "browserify": "^17.0.0",
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
-    "husky": "^4.2.3",
-    "karma": "^5.1.0",
-    "karma-browserify": "^7.0.0",
+    "husky": "^7.0.2",
+    "karma": "^6.3.4",
+    "karma-browserify": "^8.1.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-detect-browsers": "^2.3.3",
     "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^1.3.0",
+    "karma-firefox-launcher": "^2.1.1",
     "karma-mocha": "^2.0.1",
-    "karma-webpack": "^4.0.2",
-    "mocha": "^7.1.0",
+    "karma-webpack": "^5.0.0",
+    "mocha": "^9.1.1",
     "nyc": "^15.0.0",
-    "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1",
-    "sinon": "^9.0.0",
-    "ts-loader": "^6.2.1",
+    "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1",
+    "sinon": "^11.1.2",
+    "ts-loader": "^9.2.5",
     "tslint": "^6.0.0",
-    "typescript": "^3.8.3",
+    "typescript": "^4.4.2",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
@@ -48,7 +48,8 @@
     "test:node": "tsc && nyc --extension=.ts --reporter=lcov --reporter=html --reporter=text mocha --timeout=3000 test/*.spec.js",
     "test:browser": "tsc && karma start karma.conf.js",
     "tslint": "tslint --project tsconfig.json --config tslint.json",
-    "pretty": "prettier --write {src,test}/**/*.{js,ts}"
+    "pretty": "pretty-quick --staged",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
